--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /DigitalClock/DigitalClock/nbproject/private/
 /ConstructorsReview/nbproject/private/
 /ConstructorsReview/build/
+/DigitalClock/build/
+/DigitalClock/dist/
