--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /ConstructorsReview/build/
 /DigitalClock/build/
 /DigitalClock/dist/
+/PercentageCalculator/nbproject/private/
+/PercentageCalculate/nbproject/private/
+/PercentageCalculate/build/
