Percentage Calculator Complete

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /PercentageCalculator/nbproject/private/
 /PercentageCalculate/nbproject/private/
 /PercentageCalculate/build/
+/PercentageCalculate/dist/
