--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /PercentageCalculate/nbproject/private/
 /PercentageCalculate/build/
 /PercentageCalculate/dist/
+/HeightConversion/nbproject/private/
+/HeightConversion/build/
